syntax = "proto3";
 
import "google/protobuf/wrappers.proto"; 
import "base.proto";


option csharp_namespace = "Travely.PropertyManager.API";

service Property {
	rpc AddProperty(AddPropertyRequest) returns (AddPropertyResponse);
	rpc DeleteProperty(DeletePropertyRequest) returns (DeletePropertyResponse);
	rpc GetPropertyById(GetPropertyByIdRequest) returns (GetPropertyByIdResponse);
	rpc GetProperties(GetPropertiesRequest) returns (stream GetPropertiesResponse);
}

message PropertyAttachment {
	int32 Id = 1;
	string Name = 2;
	string Url = 3;
}

message AddPropertyRequest {
	string Name = 1;
	int32 Stars = 2;
	string Address = 3;
	google.protobuf.DoubleValue Latitude = 4;
	google.protobuf.DoubleValue Longitude = 5;
	string ContactName = 6;
	string Email = 7;
	string Phone = 8;
	string Website = 9;
	repeated PropertyAttachment Attachments = 10;
}
message AddPropertyResponse {
	int32 Id = 1;
}

message DeletePropertyRequest {
	int32 Id = 1;
}

message DeletePropertyResponse {
}

message GetPropertyByIdRequest {
	int32 Id = 1;
}

message GetPropertyByIdResponse {
	int32 Id = 1;
	string Name = 2;
	int32 Stars = 3;
	string Address = 4;
	google.protobuf.DoubleValue Latitude = 5;
	google.protobuf.DoubleValue Longitude = 6;
	string ContactName = 7;
	string Email = 8;
	string Phone = 9;
	string Website = 10; 
	repeated PropertyAttachment Attachments = 11;
}

message GetPropertiesRequest{
	repeated FilteringBaseModel Filters = 1;
	repeated OrderingBaseModel Orderings = 2;
} 
message GetPropertiesResponse{
	int32 Id = 1;
	string Name = 2;
	int32 Stars = 3;
	string Address = 4;
	google.protobuf.DoubleValue Latitude = 5;
	google.protobuf.DoubleValue Longitude = 6;
	string ContactName = 7;
	string Email = 8;
	string Phone = 9;
	string Website = 10; 
	repeated PropertyAttachment Attachments = 11;
}
